# saluki

./: AGENTS.md  Cargo.toml  LICENSE-3rdparty.csv
.claude/skills/config/: README.md  SKILL.md
.claude/skills/dogstatsd-audit/: SKILL.md  analyze-features.md  dogstatsd-doc-guide.md  find-adpimpl-configs.md  find-refimpl-configs.md  find-saluki-configs.md  ignored-keys.txt  known-configs-not-applicable.schema.json  known-configs.csv  known-configs.json  known-configs.schema.json  scratchpad.md
.github/workflows/: docs.yml
docker/: Dockerfile.agent-data-plane
docker/cont-init.d/: 00-panoramic-dynamic.sh
docs/.vitepress/: config.mts
docs/agent-data-plane/configuration/: dogstatsd-original-doc.md  dogstatsd.md
docs/reference/: dogstatsd-features.md
lib/agent-data-plane/: CONFRA_SPIKE_STATUS.md
lib/agent-data-plane-config/: Cargo.toml
lib/agent-data-plane/config-system/: Cargo.toml
lib/agent-data-plane/config-system/examples/: startup_collapse.rs
lib/agent-data-plane/config-system/src/: bootstrap.rs  datadog_agent.rs  dynamic.rs  lib.rs  logging.rs  stream.rs  system.rs  topology.rs  translate.rs  validate.rs
lib/datadog-agent/config/: Cargo.toml  build.rs
lib/datadog-agent/config/schema/: configuration.md.tmpl  schema_overlay.yaml
lib/datadog-agent/config/src/: datadog_configuration.rs  lib.rs  remapper.rs  total_config.rs  translator.rs  witness.rs
lib/datadog-agent/config/src/classifier/: mod.rs
lib/datadog-agent/config/src/config_registry/: classifier.rs  mod.rs
lib/saluki-component-config/: Cargo.toml
lib/saluki-component-config/src/: checks.rs  common.rs  dogstatsd.rs  dynamic.rs  events.rs  forwarder.rs  lib.rs  logs.rs  metrics.rs  otlp.rs  service_checks.rs  traces.rs
lib/saluki-components/: Cargo.toml  build.rs
(+107 files in other folders)
