[package]
name = "saluki-component-config"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
bytesize = { workspace = true }
saluki-io = { workspace = true }
stringtheory = { workspace = true }

[lints]
workspace = true
