[package]
name = "agent-data-plane-config-system"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
agent-data-plane-config = { workspace = true }
datadog-agent-commons = { workspace = true }
datadog-agent-config = { workspace = true }
saluki-config = { workspace = true }
saluki-error = { workspace = true }

[lints]
workspace = true
